--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-"dev:frontend": "vite",
+  "dev:frontend": "vite",
   "dev:backend": "node api/index.js",
   "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
   "build": "vite build",
-  "start": "node server.js"
-  },
+  "start": "node server.js",
+  "vercel-build": "vite build"
+},
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
